fix(collection text): truncate long column header titles

--- a/src/app/pages/collection/text/collection-text.page.scss
+++ b/src/app/pages/collection/text/collection-text.page.scss
@@ -61,6 +61,7 @@
         overflow: hidden;
         padding: 0;
         text-overflow: ellipsis;
+        white-space: nowrap;
         width: 100%;
       }
 
